v1.4
 - Added support to drag & drop rules and categories
 - Added support to open a chatbot file by command line
 - Added several shortcuts to switch tabs, add rules, etc.
 - Fixed bugs: github#27, github#18

v1.3
 - Fixed bug: github#26

v1.2
 - Fixed bugs: github#11, github#22, github#24, github#25
 - Added support for nested "if" conditionals
 - Console-like history in the 'Test' tab
 - Changed the Update XML format: Replaced element "critical" by "latestcritical"
   and added a "version" attribute to "what's new" items

v1.1
 - Fixed bugs: github#13, github#14, github#17, github#19, github#20
 - Displaying file hash in the new update dialog

v1.0
 - User auth using HTTPS
 - Disabled Gmail/Gtalk option for DA contest
 - Clearing score and stats on user account change

v0.27
 - Added checkbox in the options window to enable/disable higher
   priority to rules in on the current 'topic'
 - Improved stats & remote logging
 - Improved security in SecureStatsFile by adding a hash signature
 - Verifying SSL handshake in Updater
 - Embedding CA Certs in binary file
 - Added licences files in linux32 and win32 packages. Removed changelog.

v0.26
 - Added simple crash handler
 - Fixed bugs #27, #35
 
v0.25
 - Added verification of updates
 - Blocking chatbot connection and score upload if there is a critical
   update
 - Saving rosters inside the rules file
 - Saving stats and history in a new folder named <chatbot_basename>_extras
 - By default, saving chatbot files in Documents/Chatbots
 - Finished score algorithm

v0.24
 - Added authentication against 'Dale Aceptar' server.
 - Removed script to launch the application on Linux package
 
v0.23
 - Improved NLP engine: 
    - Added higher priority to those rules that match the current 'topic' 
    - Added support for literal strings (Exact match support)
 - When creating a new chatbot, added file dialog to ask filename
 - Fixed bugs #33, #34

v0.22
 - Fixed several bugs in the score algorithm